# feigenbaumtree

./: README.md  after-effects2.magick  background.magick  compose.magick  feigenbaumtree.cabal  flake.nix  hie.yaml
exe/: Main.hs
haskell/: feigenbaumtree.cabal
haskell/src/: Feigenbaumtree.hs
magick/: add-text.magick  adjust-size.magick  after-effects.magick  after-effects2.magick  background.magick  compose.magick  text.magick
src/: Feigenbaumtree.hs
