cabal-version: 3.0
name: feigenbaumtree
version: 0
synopsis: Chaos is upon us
description: Behaviour of the logistic map
license: BSD-3-Clause
license-file: LICENSE
author: Felix Springer
maintainer: felixspringer149@gmail.com
build-type: Simple

library
  exposed-modules:
    Feigenbaumtree
  build-depends:
    , base >= 4
    , containers
    , optparse-applicative
    , text
    , vector
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    OverloadedStrings
    TypeFamilies
    UnboxedTuples
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-kind-signatures
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-unused-packages

executable feigenbaumtree
  build-depends:
    , feigenbaumtree
  main-is: Main.hs
  hs-source-dirs: exe
  default-language: GHC2021
  default-extensions:
    NoImplicitPrelude
